# Flipsync_Final

./: .dockerignore.optimized  .env.postgresql  .env.production.template  .env.production.test  .flake8  .gitignore  .pre-commit-config.yaml  .vulture  .vulture_whitelist.py  =3.0.0  =3.9.0  AGENTIC_SYSTEM_OVERVIEW.md  AGENT_CONVERSATION_JUN24.md  AGENT_COORDINATION_GUIDE.md  AGENT_FUNCTIONALITY_PROOF.md  AGENT_INSTRUCTIONS_FOR_FLIPSYNC_DEVELOPMENT.md  AGENT_WRAPPER_PATTERN_GUIDE.md  AI_OPTIMIZATION_BRIEF.md  ANDROID_EMULATOR_WSL2_GUIDE.md  ARCHITECTURE_SUMMARY.md  BASELINE_METRICS.txt  CLEANUP_EXECUTION_PROMPT.md  CLEANUP_PLAN_MASTER.md  COMPREHENSIVE_ARCHITECTURE_GUIDE.md  COMPREHENSIVE_CODEBASE_ANALYSIS_UNIFIED.md  CONTAINER_USAGE_GUIDELINES.md  DEVELOPER_ARCHITECTURE_PRIMER.md  DIGITALOCEAN_MIGRATION_PLAN.md  DIRECTORY.md  DOCKER_ARCHITECTURE_CORRECTION.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_WSL2_FIX_GUIDE.md  DOCUMENTATION_HIERARCHY.md  Dockerfile  Dockerfile.flutter  Dockerfile.mobile  Dockerfile.optimized  Dockerfile.production  Dockerfile.worker  EBAY_INTEGRATION_COMPLETION_REPORT.md  (+373 more)
.github/workflows/: quality-checks.yml
docs/: AI_PERFORMANCE_MIGRATION_PLAN.md
evidence/: CONSOLIDATED_AUDIT_SUMMARY.md  OPENAI_COST_OPTIMIZATION_EVIDENCE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  agent_coordination_workflow_testing_report.md  cassini_optimization_demo.py  complete_optimization_workflow_evidence.md  complete_solution_20250622_230626.json  complete_system_validation_20250624_155608.json  comprehensive_trading_solution_20250622_224802.json  docker_container_health_validation_report.md  ebay_integration_validation_report.md  ebay_listing_verification_report.md  final_workflow_20250622_214057.json  mobile_app_production_readiness_investigation_report.md  mobile_app_production_verification_report.md  openai_cost_control_verification_report.md  phase3_comprehensive_summary.md  phase_4_real_user_testing_report.md  production_workflow_summary.md  successful_demo_20250622_204420.json
flutter_build_output/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
flutter_build_output/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
fs_agt_clean/: __init__.py  main.py  mobile_backend_integration_results.json  test_cached_llm.py  test_chat_agent_integration.py  testing
fs_agt_clean/agents/: __init__.py  base_conversational_agent.py
fs_agt_clean/api/: .agent_context  __init__.py  agent_communication.py  openapi.py  test_agent_communication.py
fs_agt_clean/app/: main.py  test_app.py  test_feature_flags.py  test_main.py
fs_agt_clean/config/: env_handler.py  test_dynamic_config.py  test_env_handler.py  test_test_dynamic_config.py
fs_agt_clean/core/: .agent_context  __init__.py  api_client.py  exceptions.py  export_service.py  marketplace_client.py  test_integration.py  workflow_intent_detector.py
fs_agt_clean/database/: .agent_context  base_repository.py  connection_manager.py  error_handling.py  init_auth_db.py  init_chat_tables.py  init_metrics_tables.py  market_schema.py  relationship_graph.py  test_market_schema.py  test_relationship_graph.py
fs_agt_clean/examples/: __init__.py  coordinator_example.py  event_system_example.py  knowledge_repository_coordinator_integration.py  knowledge_repository_example.py
fs_agt_clean/mobile/: battery_optimizer.py  mobile_service_coordinator.py  models.py  test_models.py  (+8 more)
linting_results/: bandit_report.json  black_report.txt  flake8_report.txt  isort_report.txt  mypy_report.txt  vulture_report.txt
mobile/: AI_CONFIDENCE_IMPLEMENTATION_SUMMARY.md  ANDROID_SDK_SOLUTION.md  AUTHENTICATION_TEST_RESULTS.md  FLUTTER_ENVIRONMENT_SOLUTION.md  MOBILE_BACKEND_INTEGRATION.md  README.md  TESTING_INSTRUCTIONS.md  analysis_options.yaml  chrome_workaround.sh  fix_flutter_env.sh  flutter_linter_errors.md  pubspec.yaml  run_flutter_commands.sh  serve_flutter_web.py  test_backend_connection.py  test_confidence_integration.dart  test_workflow_progress.dart
nginx/: nginx.conf
production/: gunicorn.conf.py  logging.conf  start.sh
scripts/: backup-postgres.sh  flipsync_bashrc_integration.sh  flipsync_testing_checklist.sh  init-dev-db.sql  init-infrastructure-db.sql  keep_ollama_alive.sh  keep_ollama_warm.sh  preload_ollama_models.sh  production-db-init.sql  production-db-monitoring.sql  production-db-security.sql  restore-postgres.sh  start_flipsync_web_testing.sh  test-backup-system.sh  test-production-security.py
tools/: agent_debugger.py  architecture_navigator.py  dev_automation.py  dev_setup.sh  doc_generator.py
(+947 files in other folders)
